Starting to log changes and updates for future:

---22.012.2016---

Added major comments to html files for better readability.

30.01.2017

Added Experience handling
Added Bar keeping logic

14.06
Added abstraction layer
Fixed Experience handling
Added few other tweaks

16.06
Adding json reader and json info for drinks.